--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "vitest": "^0.31.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest --run --reporter verbose",
+    "test:watch": "vitest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
