--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "react": "^17.0.1",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "vitest": "^0.31.1",
