--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "vitest": "^0.31.1",
